[package]
name = "fid"
version = "0.1.4"
authors = ["Koki Kato <koki.kato1994@gmail.com>"]
description = "FID (Fully Indexable Dictionary) implementation for Rust"
repository = "https://github.com/ajalab/fid"
readme = "README.md"
homepage = "https://github.com/ajalab/fid"
documentation = "https://docs.rs/fid"
license = "MIT"
keywords = ["fid", "bit-vector", "succinct"]
categories = ["data-structures"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.5"
bincode = "1.1"
